tests/snapshots/yaml_suite_snapshots__yaml_suite_ZCZ6_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "https://gist.github.com/anonymous/0c8db51d151baf8113205ba3ce71d1b4 via @ingydotnet"
  name: Invalid mapping in plain single line value
  tags: error mapping scalar
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n"
  yaml: "a: b: c: d\n"
