tests/snapshots/yaml_suite_snapshots__yaml_suite_ZF4X_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.6. Mapping of Mappings
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760372"
  tags: flow spec mapping
  yaml: "Mark McGwire: {hr: 65, avg: 0.278}\nSammy Sosa: {\n    hr: 63,\n    avg: 0.288\n  }\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :Mark McGwire\n   +MAP {}\n    =VAL :hr\n    =VAL :65\n    =VAL :avg\n    =VAL :0.278\n   -MAP\n …"
  json: "{\n  \"Mark McGwire\": {\n    \"hr\": 65,\n    \"avg\": 0.278\n  },\n  \"Sammy Sosa\": {\n    \"hr\": 63,\n    \"avg\": 0.288\n  }\n}\n"
  dump: "Mark McGwire:\n  hr: 65\n  avg: 0.278\nSammy Sosa:\n  hr: 63\n  avg: 0.288\n"
