tests/snapshots/yaml_suite_snapshots__yaml_suite_ZF4X_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "Mark McGwire:\n  hr: 65\n  avg: 0.278\nSammy Sosa:\n  hr: 63\n  avg: 0.288\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760372"
  json: "{\n  \"Mark McGwire\": {\n    \"hr\": 65,\n    \"avg\": 0.278\n  },\n  \"Sammy Sosa\": {\n    \"hr\": 63,\n    \"avg\": 0.288\n  }\n}\n"
  name: Spec Example 2.6. Mapping of Mappings
  tags: flow spec mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :Mark McGwire\n   +MAP {}\n    =VAL :hr\n    =VAL :65\n    =VAL :avg\n    =VAL :0.278\n   -MAP\n   =VAL :Sammy Sosa\n   +MAP {}\n    =VAL :hr\n    =VAL :63\n    =VAL :avg\n    =VAL :0.288\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  yaml: "Mark McGwire: {hr: 65, avg: 0.278}\nSammy Sosa: {\n    hr: 63,\n    avg: 0.288\n  }\n"
