tests/snapshots/yaml_suite_snapshots__yaml_suite_ZH7C_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Anchors in Mapping
  from: NimYAML tests
  tags: anchor mapping
  yaml: "&a a: b\nc: &d d\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL &a :a\n   =VAL :b\n   =VAL :c\n   =VAL &d :d\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": \"b\",\n  \"c\": \"d\"\n}\n"
