tests/snapshots/yaml_suite_snapshots__yaml_suite_ZK9H_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "key:\n- - - value\n"
  from: "@perlpunk"
  json: "{\n  \"key\": [\n    [\n      [\n        \"value\"\n      ]\n    ]\n  ]\n}\n"
  name: Nested top level flow mapping
  tags: flow indent mapping sequence
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :key\n   +SEQ []\n    +SEQ []\n     +SEQ []\n      =VAL :value\n     -SEQ\n    -SEQ\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "{ key: [[[\n  value\n ]]]\n}\n"
