tests/snapshots/yaml_suite_snapshots__yaml_suite_ZL4Z_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid nested mapping
  from: "@perlpunk"
  tags: error mapping
  fail: true
  yaml: "---\na: 'b': c\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL 'b\n"
